--- a/index.html
+++ b/index.html
@@ -4,18 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Soma Simples</title>
+    <style>
+        /* Estilos gerais para a página */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        /* Estilos para o contêiner centralizado */
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        /* Estilos para os campos de entrada */
+        input[type="number"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        /* Estilos para o botão */
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        /* Estilo do título */
+        h1 {
+            font-size: 24px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Calculadora de Soma Simples</h1>
-    
-    <label for="numero1">Número 1: </label>
-    <input type="number" id="numero1" placeholder="Digite um número"><br><br>
 
-    <label for="numero2">Número 2: </label>
-    <input type="number" id="numero2" placeholder="Digite um número"><br><br>
+    <div class="container">
+        <h1>Calculadora de Soma Simples</h1>
 
-    <button id="calcularBtn">Calcular</button>
+        <label for="numero1">Número 1:</label>
+        <input type="number" id="numero1" placeholder="Digite um número">
 
-    <script src="script.js"></script>
+        <label for="numero2">Número 2:</label>
+        <input type="number" id="numero2" placeholder="Digite um número">
+
+        <button id="calcularBtn">Calcular</button>
+    </div>
+
+    <script>
+        document.getElementById('calcularBtn').addEventListener('click', function() {
+            // Pegando os valores dos campos de entrada
+            var numero1 = parseFloat(document.getElementById('numero1').value);
+            var numero2 = parseFloat(document.getElementById('numero2').value);
+
+            // Verificando se os valores são números
+            if (isNaN(numero1) || isNaN(numero2)) {
+                alert('Por favor, insira números válidos.');
+            } else {
+                // Somando os valores
+                var resultado = numero1 + numero2;
+
+                // Exibindo o resultado em um alert
+                alert('O resultado da soma é: ' + resultado);
+            }
+        });
+    </script>
+
 </body>
 </html>
